--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,25 +13,25 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-05 Tue 09:07]
+#+CAPTION: Clock summary at [2017-12-05 Tue 18:10]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *49:15* |       |       | 100.0 |
+| *Total time*                                                                | *49:32* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 49:15   |       |       | 100.0 |
-| Active                                                                      |         | 49:15 |       | 100.0 |
+| Stories                                                                     | 49:32   |       |       | 100.0 |
+| Active                                                                      |         | 49:32 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   2.1 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:13 |   4.5 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.2 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  17.6 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  27.9 |
-| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   4.8 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  32.6 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  17.5 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  27.7 |
+| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   4.7 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  32.4 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.8 |
 | STARTED Finish setting up coveralls                                         |         |       |  2:57 |   6.0 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   2.1 |
-| STARTED Remove all deprecated code after exomodels clean up                 |         |       |  0:11 |   0.4 |
+| STARTED Remove all deprecated code after exomodels clean up                 |         |       |  0:28 |   0.9 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -450,6 +450,7 @@ program options:
 - [[https://stackoverflow.com/questions/15541498/how-to-implement-subcommands-using-boost-program-options][How to implement subcommands using Boost.Program_options?]]
 
 *** STARTED Remove all deprecated code after exomodels clean up       :story:
+    CLOCK: [2017-12-05 Tue 17:53]--[2017-12-05 Tue 18:10] =>  0:17
     CLOCK: [2017-12-05 Tue 09:01]--[2017-12-05 Tue 09:07] =>  0:06
     CLOCK: [2017-12-05 Tue 08:55]--[2017-12-05 Tue 09:00] =>  0:05
 
@@ -459,6 +460,12 @@ Remove all deprecated code:
 - yarn: drop exoelement properties, drop new code logic, groups in
   context, annotations transform, nameable/metanameable from exomodel.
 - annotations: scribble groups and related classes.
+
+*** Add filename to exomodels                                         :story:
+
+We need some way of identifying exomodels. We cannot use the name
+"name" given that this is computed based on meta-data. However, we
+could use either "id" or filename.
 
 *** Investigate current implementation of the origin transform        :story:
 
@@ -513,6 +520,8 @@ Merge stitch and wale into a new model called =templates=.
 
 Create a new model called =external= and move all exogenous model
 related class to it.
+
+Consider naming it =codec=.
 
 *** Create the =generation= model                                     :story:
 
