--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,14 +13,14 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-05 Tue 18:10]
+#+CAPTION: Clock summary at [2017-12-05 Tue 18:15]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *49:32* |       |       | 100.0 |
+| *Total time*                                                                | *49:36* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 49:32   |       |       | 100.0 |
-| Active                                                                      |         | 49:32 |       | 100.0 |
+| Stories                                                                     | 49:36   |       |       | 100.0 |
+| Active                                                                      |         | 49:36 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   2.1 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:13 |   4.5 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.2 |
@@ -29,9 +29,9 @@
 | COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   4.7 |
 | COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  32.4 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.8 |
-| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   6.0 |
+| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   5.9 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   2.1 |
-| STARTED Remove all deprecated code after exomodels clean up                 |         |       |  0:28 |   0.9 |
+| STARTED Remove all deprecated code after exomodels clean up                 |         |       |  0:32 |   1.1 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -450,6 +450,8 @@ program options:
 - [[https://stackoverflow.com/questions/15541498/how-to-implement-subcommands-using-boost-program-options][How to implement subcommands using Boost.Program_options?]]
 
 *** STARTED Remove all deprecated code after exomodels clean up       :story:
+    CLOCK: [2017-12-05 Tue 18:16]--[2017-12-05 Tue 18:21] =>  0:05
+    CLOCK: [2017-12-05 Tue 18:11]--[2017-12-05 Tue 18:15] =>  0:04
     CLOCK: [2017-12-05 Tue 17:53]--[2017-12-05 Tue 18:10] =>  0:17
     CLOCK: [2017-12-05 Tue 09:01]--[2017-12-05 Tue 09:07] =>  0:06
     CLOCK: [2017-12-05 Tue 08:55]--[2017-12-05 Tue 09:00] =>  0:05
