--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,25 +13,26 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-05 Tue 21:16]
+#+CAPTION: Clock summary at [2017-12-05 Tue 21:30]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *51:04* |       |       | 100.0 |
+| *Total time*                                                                | *51:16* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 51:04   |       |       | 100.0 |
-| Active                                                                      |         | 51:04 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   2.1 |
+| Stories                                                                     | 51:16   |       |       | 100.0 |
+| Active                                                                      |         | 51:16 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   2.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:13 |   4.3 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.1 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  17.0 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  26.9 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  16.9 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  26.8 |
 | COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   4.6 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  31.4 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  31.3 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.8 |
 | COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   3.9 |
+| COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.4 |
 | STARTED Finish setting up coveralls                                         |         |       |  2:57 |   5.8 |
-| STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   2.1 |
+| STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   2.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -407,6 +408,14 @@ Remove all deprecated code:
 - annotations: scribble groups and related classes.
 - stitch: drop usage of scribbles
 
+*** COMPLETED Add some kind of identity to exomodels                  :story:
+    CLOSED: [2017-12-05 Tue 21:30]
+    CLOCK: [2017-12-05 Tue 21:17]--[2017-12-05 Tue 21:29] =>  0:12
+
+We need some way of identifying exomodels. We cannot use the name
+"name" given that this is computed based on meta-data. However, we
+could use either "id" or filename.
+
 *** STARTED Finish setting up coveralls                               :story:
     CLOCK: [2017-11-29 Wed 23:48]--[2017-11-30 Thu 00:21] =>  0:33
     CLOCK: [2017-11-29 Wed 22:45]--[2017-11-29 Wed 23:47] =>  1:02
@@ -469,12 +478,6 @@ program options:
   processing with boost program_options
 - [[https://stackoverflow.com/questions/15541498/how-to-implement-subcommands-using-boost-program-options][How to implement subcommands using Boost.Program_options?]]
 
-*** Add filename to exomodels                                         :story:
-
-We need some way of identifying exomodels. We cannot use the name
-"name" given that this is computed based on meta-data. However, we
-could use either "id" or filename.
-
 *** Investigate current implementation of the origin transform        :story:
 
 Do we need to have the origin expansion? can we not just supply the
@@ -530,6 +533,18 @@ Create a new model called =external= and move all exogenous model
 related class to it.
 
 Consider naming it =codec=.
+
+We should also split the model into the usual transforms, helpers,
+meta-model etc split. The top level transforms should be:
+
+- to dia diagram
+- to processed object
+- to model
+
+Notes:
+
+- we should have a dia to codec model chain.
+- rename adapter to factory to match processed object.
 
 *** Create the =generation= model                                     :story:
 
