--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,26 +13,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-05 Tue 21:30]
+#+CAPTION: Clock summary at [2017-12-05 Tue 21:36]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *51:16* |       |       | 100.0 |
+| *Total time*                                                                | *51:21* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 51:16   |       |       | 100.0 |
-| Active                                                                      |         | 51:16 |       | 100.0 |
+| Stories                                                                     | 51:21   |       |       | 100.0 |
+| Active                                                                      |         | 51:21 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   2.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:13 |   4.3 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.1 |
 | COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  16.9 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  26.8 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  26.7 |
 | COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   4.6 |
 | COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  31.3 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.8 |
 | COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   3.9 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.4 |
-| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   5.8 |
+| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   5.7 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   2.0 |
+| STARTED Clean up tagged values                                              |         |       |  0:05 |   0.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -478,18 +479,19 @@ program options:
   processing with boost program_options
 - [[https://stackoverflow.com/questions/15541498/how-to-implement-subcommands-using-boost-program-options][How to implement subcommands using Boost.Program_options?]]
 
-*** Investigate current implementation of the origin transform        :story:
-
-Do we need to have the origin expansion? can we not just supply the
-origin type to the exomodel adapter directly?
-
-*** Clean up tagged values                                            :story:
+*** STARTED Clean up tagged values                                    :story:
+    CLOCK: [2017-12-05 Tue 21:31]--[2017-12-05 Tue 21:36] =>  0:05
 
 Tasks:
 
 - rename entries in annotations to tagged values.
 - rename key value pairs to tagged values in yarn.dia processed
   object.
+
+*** Investigate current implementation of the origin transform        :story:
+
+Do we need to have the origin expansion? can we not just supply the
+origin type to the exomodel adapter directly?
 
 *** Clean up exoelement                                               :story:
 
