--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,27 +13,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-05 Tue 21:36]
+#+CAPTION: Clock summary at [2017-12-05 Tue 21:55]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *51:21* |       |       | 100.0 |
+| *Total time*                                                                | *51:39* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 51:21   |       |       | 100.0 |
-| Active                                                                      |         | 51:21 |       | 100.0 |
+| Stories                                                                     | 51:39   |       |       | 100.0 |
+| Active                                                                      |         | 51:39 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   2.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:13 |   4.3 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.1 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  16.9 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  26.7 |
-| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   4.6 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  31.3 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  16.8 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  26.6 |
+| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   4.5 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  31.1 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.8 |
 | COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   3.9 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.4 |
+| COMPLETED Clean up tagged values                                            |         |       |  0:23 |   0.7 |
 | STARTED Finish setting up coveralls                                         |         |       |  2:57 |   5.7 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   2.0 |
-| STARTED Clean up tagged values                                              |         |       |  0:05 |   0.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -417,6 +417,17 @@ We need some way of identifying exomodels. We cannot use the name
 "name" given that this is computed based on meta-data. However, we
 could use either "id" or filename.
 
+*** COMPLETED Clean up tagged values                                  :story:
+    CLOSED: [2017-12-05 Tue 21:55]
+    CLOCK: [2017-12-05 Tue 21:37]--[2017-12-05 Tue 21:55] =>  0:18
+    CLOCK: [2017-12-05 Tue 21:31]--[2017-12-05 Tue 21:36] =>  0:05
+
+Tasks:
+
+- rename entries in annotations to tagged values.
+- rename key value pairs to tagged values in yarn.dia processed
+  object.
+
 *** STARTED Finish setting up coveralls                               :story:
     CLOCK: [2017-11-29 Wed 23:48]--[2017-11-30 Thu 00:21] =>  0:33
     CLOCK: [2017-11-29 Wed 22:45]--[2017-11-29 Wed 23:47] =>  1:02
@@ -478,15 +489,6 @@ program options:
 - [[https://gist.github.com/randomphrase/10801888][cmdoptions.cpp]]: Demonstration of how to do subcommand option
   processing with boost program_options
 - [[https://stackoverflow.com/questions/15541498/how-to-implement-subcommands-using-boost-program-options][How to implement subcommands using Boost.Program_options?]]
-
-*** STARTED Clean up tagged values                                    :story:
-    CLOCK: [2017-12-05 Tue 21:31]--[2017-12-05 Tue 21:36] =>  0:05
-
-Tasks:
-
-- rename entries in annotations to tagged values.
-- rename key value pairs to tagged values in yarn.dia processed
-  object.
 
 *** Investigate current implementation of the origin transform        :story:
 
