--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,27 +13,28 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-05 Tue 21:55]
+#+CAPTION: Clock summary at [2017-12-06 Wed 20:43]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *51:39* |       |       | 100.0 |
+| *Total time*                                                                | *51:57* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 51:39   |       |       | 100.0 |
-| Active                                                                      |         | 51:39 |       | 100.0 |
+| Stories                                                                     | 51:57   |       |       | 100.0 |
+| Active                                                                      |         | 51:57 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   2.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:13 |   4.3 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.1 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  16.8 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  26.6 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  16.7 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  26.4 |
 | COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   4.5 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  31.1 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  30.9 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.8 |
-| COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   3.9 |
+| COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   3.8 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.4 |
 | COMPLETED Clean up tagged values                                            |         |       |  0:23 |   0.7 |
 | STARTED Finish setting up coveralls                                         |         |       |  2:57 |   5.7 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   2.0 |
+| STARTED Investigate current implementation of the origin transform          |         |       |  0:18 |   0.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -490,10 +491,23 @@ program options:
   processing with boost program_options
 - [[https://stackoverflow.com/questions/15541498/how-to-implement-subcommands-using-boost-program-options][How to implement subcommands using Boost.Program_options?]]
 
-*** Investigate current implementation of the origin transform        :story:
+*** STARTED Investigate current implementation of the origin transform :story:
+    CLOCK: [2017-12-06 Wed 20:25]--[2017-12-06 Wed 20:43] =>  0:18
 
 Do we need to have the origin expansion? can we not just supply the
 origin type to the exomodel adapter directly?
+
+Actually this cannot be done. The problem is we still need to
+distinguish between dogen models and non-dogen models; we need to
+register all dogen models. This is done via meta-data. We cannot use
+the meta-data until we have converted into an endomodel. We could
+consider having a flag at the exomodel level for this - it is a
+concept at this level - but we still need to map it to origin
+types. However, it is perhaps cleaner to express this concept at the
+exomodel level rather than the endomodel level given we are saying
+there are two different kinds of exomodels: proxyness is a fundamental
+property of an exomodel. If we do this we can then do the mapping in
+flight as we transform from exomodel to endomodel.
 
 *** Clean up exoelement                                               :story:
 
