--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,26 +13,27 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-06 Wed 23:21]
+#+CAPTION: Clock summary at [2017-12-07 Thu 09:00]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *54:35* |       |       | 100.0 |
+| *Total time*                                                                | *55:13* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 54:35   |       |       | 100.0 |
-| Active                                                                      |         | 54:35 |       | 100.0 |
+| Stories                                                                     | 55:13   |       |       | 100.0 |
+| Active                                                                      |         | 55:13 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.9 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:13 |   4.1 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:13 |   4.0 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.1 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  15.9 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  25.1 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  15.7 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  24.8 |
 | COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   4.3 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  29.4 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  29.1 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.8 |
-| COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   3.7 |
+| COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   3.6 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.4 |
 | COMPLETED Clean up tagged values                                            |         |       |  0:23 |   0.7 |
-| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   5.4 |
+| COMPLETED Simplify input model generation in cmake                          |         |       |  0:38 |   1.1 |
+| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   5.3 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.9 |
 | STARTED Investigate current implementation of the origin transform          |         |       |  0:18 |   0.5 |
 | STARTED Create the =external= model                                         |         |       |  2:38 |   4.8 |
@@ -430,6 +431,18 @@ Tasks:
 - rename key value pairs to tagged values in yarn.dia processed
   object.
 
+*** COMPLETED Simplify input model generation in cmake                :story:
+    CLOSED: [2017-12-07 Thu 08:59]
+    CLOCK: [2017-12-07 Thu 08:23]--[2017-12-07 Thu 09:01] =>  0:38
+
+At present we have copy and pasted the input model targets in cmake,
+for both JSON and dia. This is not ideal:
+
+- its a pain to add new targets
+- JSON and dia options can start to diverge over time.
+
+Factor out all the common code and create targets using a loop.
+
 *** STARTED Finish setting up coveralls                               :story:
     CLOCK: [2017-11-29 Wed 23:48]--[2017-11-30 Thu 00:21] =>  0:33
     CLOCK: [2017-11-29 Wed 22:45]--[2017-11-29 Wed 23:47] =>  1:02
@@ -530,7 +543,7 @@ Notes:
 - we should have a dia to codec model chain.
 - rename adapter to factory to match processed object.
 
-*** Create a =transforms= model                                       :story:
+*** STARTED Create a =probing= model                                  :story:
 
 We need to move the probing logic into a transforms model, so we can
 use it outside of yarn. We should also move:
