--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,31 +13,31 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-09 Sat 12:21]
+#+CAPTION: Clock summary at [2017-12-09 Sat 12:32]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *56:35* |       |       | 100.0 |
+| *Total time*                                                                | *56:45* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 56:35   |       |       | 100.0 |
-| Active                                                                      |         | 56:35 |       | 100.0 |
+| Stories                                                                     | 56:45   |       |       | 100.0 |
+| Active                                                                      |         | 56:45 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   1.9 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:13 |   3.9 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:23 |   4.2 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.0 |
 | COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  15.3 |
 | COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  24.2 |
-| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   4.2 |
-| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  28.4 |
+| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   4.1 |
+| COMPLETED Implement exomodel in terms of exoelements                        |         |       | 16:03 |  28.3 |
 | COMPLETED Fix JSON tests                                                    |         |       |  0:25 |   0.7 |
 | COMPLETED Remove all deprecated code after exomodels clean up               |         |       |  2:00 |   3.5 |
 | COMPLETED Add some kind of identity to exomodels                            |         |       |  0:12 |   0.4 |
 | COMPLETED Clean up tagged values                                            |         |       |  0:23 |   0.7 |
 | COMPLETED Simplify input model generation in cmake                          |         |       |  0:38 |   1.1 |
+| COMPLETED Create a =probing= model                                          |         |       |  1:22 |   2.4 |
 | STARTED Finish setting up coveralls                                         |         |       |  2:57 |   5.2 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   1.9 |
 | STARTED Investigate current implementation of the origin transform          |         |       |  0:18 |   0.5 |
-| STARTED Create the =external= model                                         |         |       |  2:38 |   4.7 |
-| STARTED Create a =probing= model                                            |         |       |  1:22 |   2.4 |
+| STARTED Create the =external= model                                         |         |       |  2:38 |   4.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -101,6 +101,7 @@ For all other architectures and/or operative systems, you will need to build Dog
 - [[https://gitter.im/DomainDrivenConsulting/dogen][Gitter]]
 
 *** STARTED Sprint and product backlog grooming                       :story:
+    CLOCK: [2017-12-09 Sat 12:22]--[2017-12-09 Sat 12:32] =>  0:10
     CLOCK: [2017-12-05 Tue 08:49]--[2017-12-05 Tue 08:54] =>  0:05
     CLOCK: [2017-12-01 Fri 12:51]--[2017-12-01 Fri 13:14] =>  0:23
     CLOCK: [2017-12-01 Fri 11:29]--[2017-12-01 Fri 11:46] =>  0:17
@@ -444,6 +445,28 @@ for both JSON and dia. This is not ideal:
 
 Factor out all the common code and create targets using a loop.
 
+*** COMPLETED Create a =probing= model                                :story:
+    CLOSED: [2017-12-09 Sat 12:28]
+    CLOCK: [2017-12-09 Sat 12:14]--[2017-12-09 Sat 12:21] =>  0:07
+    CLOCK: [2017-12-09 Sat 12:02]--[2017-12-09 Sat 12:13] =>  0:11
+    CLOCK: [2017-12-09 Sat 11:45]--[2017-12-09 Sat 12:01] =>  0:16
+    CLOCK: [2017-12-09 Sat 11:29]--[2017-12-09 Sat 11:44] =>  0:15
+    CLOCK: [2017-12-09 Sat 11:01]--[2017-12-09 Sat 11:28] =>  0:27
+    CLOCK: [2017-12-07 Thu 09:01]--[2017-12-07 Thu 09:07] =>  0:06
+
+We need to move the probing logic into a transforms model, so we can
+use it outside of yarn. We should also move:
+
+- context, context factory
+- options
+
+Actually it makes more sense to just have the probing infrastructure.
+
+We need a way to generalise the "initial input" dumping. In effect,
+what we are really saying is that within a transform we may need to
+dump more state than just the initial inputs. We need a way to express
+this in the probing API.
+
 *** STARTED Finish setting up coveralls                               :story:
     CLOCK: [2017-11-29 Wed 23:48]--[2017-11-30 Thu 00:21] =>  0:33
     CLOCK: [2017-11-29 Wed 22:45]--[2017-11-29 Wed 23:47] =>  1:02
@@ -544,26 +567,13 @@ Notes:
 - we should have a dia to codec model chain.
 - rename adapter to factory to match processed object.
 
-*** STARTED Create a =probing= model                                  :story:
-    CLOCK: [2017-12-09 Sat 12:14]--[2017-12-09 Sat 12:21] =>  0:07
-    CLOCK: [2017-12-09 Sat 12:02]--[2017-12-09 Sat 12:13] =>  0:11
-    CLOCK: [2017-12-09 Sat 11:45]--[2017-12-09 Sat 12:01] =>  0:16
-    CLOCK: [2017-12-09 Sat 11:29]--[2017-12-09 Sat 11:44] =>  0:15
-    CLOCK: [2017-12-09 Sat 11:01]--[2017-12-09 Sat 11:28] =>  0:27
-    CLOCK: [2017-12-07 Thu 09:01]--[2017-12-07 Thu 09:07] =>  0:06
+*** Add support for "ad-hoc" probing                                  :story:
 
-We need to move the probing logic into a transforms model, so we can
-use it outside of yarn. We should also move:
-
-- context, context factory
-- options
-
-Actually it makes more sense to just have the probing infrastructure.
-
-We need a way to generalise the "initial input" dumping. In effect,
-what we are really saying is that within a transform we may need to
-dump more state than just the initial inputs. We need a way to express
-this in the probing API.
+We have a set of inputs supplied to the prober called "initial
+input". This is not ideal. We need a way to generalise the "initial
+input" dumping. In effect, what we are really saying is that within a
+transform we may need to dump more state than just the initial
+inputs. We need a way to express this in the probing API.
 
 *** Rename the =transform= method to =apply=                          :story:
 
